--- a/web/_/hijacks.css
+++ b/web/_/hijacks.css
@@ -14,4 +14,5 @@ table#hijack_list tr.blacklist{ color: white; background-color: #c00; }
 table#hijack_list tr.blacklist td{ border-color: white; }
 table#hijack_list tr.suspicious_checked { color: black; background-color: pink; }
 table#hijack_list tr:hover{ color: black; background-color: #eee; }
-table#hijack_list tr td:nth-child(n+11){ text-align: right; }
+table#hijack_list tr td:nth-child(n+13){ text-align: right; }
+table#hijack_list tr.suspicious .filter3_warning{ color: red; }
